--- a/src/main/resources/com/canja/kutowerdefence/mainmenu-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/mainmenu-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox fx:id="pane" alignment="CENTER" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.canja.kutowerdefence.TitleScreenView">
+<VBox fx:id="pane" alignment="CENTER" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.canja.kutowerdefence.MainMenuView">
    <ImageView fx:id="logoimage" fitHeight="300.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true" />
    <Pane prefHeight="50.0" />
    <Button layoutX="315.0" layoutY="210.0" mnemonicParsing="false" text="New Game">
@@ -20,7 +20,7 @@
       </font>
    </Button>
    <Pane prefHeight="20.0" />
-   <Button layoutX="316.0" layoutY="309.0" mnemonicParsing="false" text="Edit Mode">
+   <Button fx:id="editModeButton" layoutX="316.0" layoutY="309.0" mnemonicParsing="false" text="Edit Mode">
       <font>
          <Font size="16.0" />
       </font>
