--- a/src/main/resources/com/canja/kutowerdefence/optionsmenu-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/optionsmenu-view.fxml
@@ -1,14 +1,192 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
-</AnchorPane>
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Pane prefHeight="54.0" prefWidth="1280.0" />
+      <Label text="OPTIONS MENU">
+         <font>
+            <Font name="System Bold" size="22.0" />
+         </font></Label>
+      <Pane prefHeight="120.0" prefWidth="1280.0" />
+      <HBox alignment="CENTER" prefHeight="480.0" prefWidth="1280.0">
+         <children>
+            <VBox prefHeight="480.0" prefWidth="580.0">
+               <children>
+                  <HBox alignment="TOP_CENTER" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Number Of Waves :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Delay | Waves :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Delay | Groups of Waves :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="40.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Delay | Enemies of a Group :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Gold | Starting Amount :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="40.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Gold | Goblin :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="70.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Gold | Knight :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="100.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Cost | Archer Tower:" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Cost | Artillery Tower:" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="40.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Cost | Mage Tower:" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+               </children></VBox>
+            <Pane prefHeight="463.0" prefWidth="72.0" />
+            <VBox prefHeight="480.0" prefWidth="580.0">
+               <children>
+                  <HBox alignment="TOP_CENTER" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Hitpoint | Starting Amount :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children></HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Hitpoint | Goblin :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Hitpoint | Knight :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="40.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Damage | Arrow :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Damage | Artillery Shell :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="40.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Damage | Spell :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="70.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Range | Tower :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="100.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Range | AOE Effect :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="160.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Speed | Goblin :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="5.0" prefWidth="200.0" />
+                  <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="220.0" prefHeight="40.0" prefWidth="580.0">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="300.0" text="Speed | Knight :" />
+                        <Pane prefHeight="40.0" prefWidth="30.0" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="__" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+      <Pane prefHeight="50.0" prefWidth="200.0" />
+      <HBox alignment="TOP_RIGHT" prefHeight="120.0" prefWidth="1280.0">
+         <children>
+            <Button mnemonicParsing="false" text="Revert to Default" />
+            <Pane prefHeight="93.0" prefWidth="100.0" />
+         </children>
+      </HBox>
+   </children>
+</VBox>
