--- a/src/main/resources/com/canja/kutowerdefence/mapeditor-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/mapeditor-view.fxml
@@ -1,27 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
+<?import javafx.scene.shape.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="729.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.canja.kutowerdefence.MapEditorView">
+<BorderPane prefHeight="768.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.canja.kutowerdefence.MapEditorView">
    <right>
-      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="256.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+            <HBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="256.0">
                <children>
                   <Label alignment="CENTER" text="Edit Mode">
                      <font>
                         <Font size="24.0" />
                      </font></Label>
-                  <Pane prefHeight="5.0" prefWidth="10.0" />
+                  <Pane prefHeight="5.0" prefWidth="24.0" />
                   <Button fx:id="exitButton" mnemonicParsing="false" onAction="#exitButtonOnClick" text="X">
                      <font>
                         <Font size="16.0" />
                      </font></Button>
+                  <Pane prefHeight="5.0" prefWidth="20.0" />
                </children>
             </HBox>
+            <HBox alignment="CENTER" prefHeight="60.0" prefWidth="256.0">
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="Pen" />
+                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="Ers" />
+                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="Fill" />
+                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="Clr" />
+                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="Sav" />
+               </children>
+            </HBox>
+            <ImageView fx:id="tilesetImageView" fitHeight="512.0" fitWidth="256.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </VBox>
    </right>
+   <center>
+      <GridPane fx:id="tileGrid" gridLinesVisible="true" prefHeight="768.0" prefWidth="1024.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+   </center>
 </BorderPane>
