--- a/src/main/resources/com/canja/kutowerdefence/editmode-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/editmode-view.fxml
@@ -4,9 +4,8 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import javafx.scene.shape.*?>
 
-<BorderPane prefHeight="768.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.canja.kutowerdefence.MapEditorView">
+<BorderPane prefHeight="768.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.canja.kutowerdefence.ui.EditModeView">
    <right>
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="256.0" BorderPane.alignment="CENTER">
          <children>
@@ -38,7 +37,7 @@
       </VBox>
    </right>
    <center>
-      <GridPane fx:id="tileGrid" gridLinesVisible="true" prefHeight="768.0" prefWidth="1024.0">
+      <GridPane fx:id="mapGridPane" gridLinesVisible="true" prefHeight="768.0" prefWidth="1024.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
