--- a/src/main/resources/com/canja/kutowerdefence/mainmenu-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/mainmenu-view.fxml
@@ -8,8 +8,8 @@
 <VBox fx:id="pane" alignment="CENTER" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.canja.kutowerdefence.ui.MainMenuView">
    <ImageView fx:id="logoimage" fitHeight="300.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true" />
    <Pane prefHeight="50.0" />
-   <Button layoutX="315.0" layoutY="210.0" mnemonicParsing="false" text="New Game">
-      <font>
+   <Button fx:id="newGameButton" layoutX="315.0" layoutY="210.0" mnemonicParsing="false" text="New Game">
+   <font>
          <Font size="16.0" />
       </font>
    </Button>
