--- a/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
@@ -6,40 +6,43 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.canja.kutowerdefence.ui.GamePlayView">
     <center>
-        <GridPane fx:id="mapGridPane" gridLinesVisible="true" prefHeight="768.0" prefWidth="1024.0">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-            </rowConstraints>
-        </GridPane>
+        <StackPane>
+            <GridPane fx:id="mapGridPane" gridLinesVisible="true" prefHeight="768.0" prefWidth="1024.0">
+                <columnConstraints>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                </rowConstraints>
+            </GridPane>
+            <Pane fx:id="enemyLayer" pickOnBounds="false" />
+        </StackPane>
     </center>
     <right>
         <VBox alignment="TOP_CENTER" spacing="10" prefWidth="256.0" BorderPane.alignment="CENTER">
