--- a/src/main/resources/com/canja/kutowerdefence/optionsmenu-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/optionsmenu-view.fxml
@@ -191,7 +191,7 @@
       <Pane prefHeight="50.0" prefWidth="200.0" />
       <HBox alignment="TOP_CENTER" prefHeight="120.0" prefWidth="1280.0">
          <children>
-            <Button mnemonicParsing="false" text="Save Settings" />
+            <Button fx:id="saveButton" mnemonicParsing="false" text="Save Settings" />
             <Pane prefHeight="93.0" prefWidth="800.0" />
             <Button fx:id="restoreButton" mnemonicParsing="false" text="Revert to Default" />
          </children>
