--- a/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
@@ -1,113 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/17.0.12"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.canja.kutowerdefence.ui.GamePlayView">
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-  <!-- CENTER: Map + Enemies -->
-  <center>
-    <StackPane>
-      <GridPane fx:id="mapGridPane"
-                gridLinesVisible="true"
-                prefHeight="768.0"
-                prefWidth="1024.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-          <!-- repeat ColumnConstraints as needed... -->
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
-          <!-- repeat RowConstraints as needed... -->
-        </rowConstraints>
-      </GridPane>
-      <Pane fx:id="enemyLayer" pickOnBounds="false"/>
-    </StackPane>
-  </center>
-
-  <!-- RIGHT: Controls + HUD -->
-  <right>
-    <VBox alignment="TOP_CENTER" spacing="10" prefWidth="256.0" BorderPane.alignment="CENTER">
-      <children>
-        <!-- Control Buttons -->
-        <Button fx:id="pauseButton"   text="Pause"/>
-        <Button fx:id="restartButton" text="Restart"/>
-        <Button fx:id="speedButton"   text="1x"/>
-        <Button fx:id="exitButton"    text="Exit"/>
-
-        <!-- HUD Overlay -->
-
-        <!-- GOLD -->
+<BorderPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.canja.kutowerdefence.ui.GamePlayView">
+    <center>
         <StackPane>
-          <ImageView fx:id="goldFrame" fitWidth="200" preserveRatio="true">
-            <image>
-              <Image url="@../ui/images/gold_frame.png"/>
-            </image>
-          </ImageView>
-          <HBox alignment="CENTER" spacing="8">
-            <ImageView fx:id="goldIcon" fitHeight="24" preserveRatio="true">
-              <image>
-                <Image url="@../ui/images/coin_icon.png"/>
-              </image>
-            </ImageView>
-            <Label fx:id="goldLabel"
-                   text="0"
-                   style="-fx-font-size:18px; -fx-text-fill:white;"/>
-          </HBox>
+            <GridPane fx:id="mapGridPane" gridLinesVisible="true" prefHeight="768.0" prefWidth="1024.0">
+                <columnConstraints>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                </rowConstraints>
+            </GridPane>
+            <Pane fx:id="enemyLayer" pickOnBounds="false" />
         </StackPane>
+    </center>
+    <right>
+        <VBox alignment="TOP_CENTER" prefWidth="256.0" spacing="10" BorderPane.alignment="CENTER">
+            <children>
+                <Button fx:id="pauseButton" text="Pause" />
+                <Button fx:id="restartButton" text="Restart" />
+                <Button fx:id="exitButton" text="Exit" />
+                <HBox alignment="CENTER_LEFT" spacing="10">
+                    <Pane prefHeight="24.0" prefWidth="24.0" />
+                    <ImageView fx:id="healthIcon" fitHeight="24" fitWidth="24" />
+                    <Label fx:id="healthLabel" text="100" />
+                </HBox>
 
-        <!-- HEALTH -->
-        <StackPane>
-          <ImageView fx:id="healthFrame" fitWidth="200" preserveRatio="true">
-            <image>
-              <Image url="@../ui/images/health_frame.png"/>
-            </image>
-          </ImageView>
-          <HBox alignment="CENTER" spacing="8">
-            <ImageView fx:id="heartIcon" fitHeight="24" preserveRatio="true">
-              <image>
-                <Image url="@../ui/images/heart_icon.png"/>
-              </image>
-            </ImageView>
-            <Label fx:id="healthLabel"
-                   text="0/0"
-                   style="-fx-font-size:18px; -fx-text-fill:white;"/>
-          </HBox>
-        </StackPane>
+                <HBox alignment="CENTER_LEFT" spacing="10">
+                    <Pane prefHeight="24.0" prefWidth="24.0" />
+                    <ImageView fx:id="goldIcon" fitHeight="24" fitWidth="24" />
+                    <Label fx:id="goldLabel" text="500" />
+                </HBox>
 
-        <!-- WAVE -->
-        <StackPane>
-          <ImageView fx:id="waveFrame" fitWidth="200" preserveRatio="true">
-            <image>
-              <Image url="@../ui/images/wave_frame.png"/>
-            </image>
-          </ImageView>
-          <HBox alignment="CENTER" spacing="8">
-            <ImageView fx:id="shieldIcon" fitHeight="24" preserveRatio="true">
-              <image>
-                <Image url="@../ui/images/shield_icon.png"/>
-              </image>
-            </ImageView>
-            <Label fx:id="waveLabel"
-                   text="0/0"
-                   style="-fx-font-size:18px; -fx-text-fill:white;"/>
-          </HBox>
-        </StackPane>
+                <HBox alignment="CENTER_LEFT" spacing="10">
+                    <Pane prefHeight="24.0" prefWidth="24.0" />
+                    <ImageView fx:id="waveIcon" fitHeight="24" fitWidth="24" />
+                    <Label fx:id="waveLabel" text="1/10" />
+                </HBox>
 
-      </children>
-    </VBox>
-  </right>
-
+            </children>
+        </VBox>
+    </right>
 </BorderPane>
