Improved HUD for tower selection WIP

--- a/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <BorderPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.canja.kutowerdefence.ui.GamePlayView">
     <center>
@@ -42,31 +43,108 @@
                 </rowConstraints>
             </GridPane>
             <Pane fx:id="enemyLayer" pickOnBounds="false" />
+         <AnchorPane prefHeight="64.0" prefWidth="256.0">
+                <StackPane>
+                  <ImageView fitHeight="96.0" pickOnBounds="true" preserveRatio="true" translateX="-20.0" translateY="-36.0">
+                     <image>
+                        <Image url="@../../../assets/ui/banner_hanging.png" />
+                     </image></ImageView>
+               <HBox alignment="CENTER_LEFT" prefHeight="64.0" prefWidth="256.0">
+                   <Pane prefWidth="16.0" />
+                   <StackPane prefWidth="72.0" translateY="-8.0">
+                     <children>
+                        <ImageView fitWidth="72.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../assets/ui/button_grey.png" />
+                           </image></ImageView>
+                         <ImageView fitWidth="16" translateX="-20" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../assets/ui/button/0.png" />
+                           </image></ImageView>
+                         <Label text="1500" translateX="12">
+                             <font>
+                                 <Font name="System Bold" size="13.0" />
+                             </font></Label>
+                     </children></StackPane>
+                   <Pane prefWidth="16.0" />
+                     <StackPane prefWidth="72.0">
+                        <children>
+                         <ImageView fitWidth="64.0" pickOnBounds="true" preserveRatio="true">
+                             <image>
+                                 <Image url="@../../../assets/ui/button/tower_option_buttons_0.png" />
+                             </image>
+                           </ImageView>
+                            <Label text="150" translateX="16" translateY="24">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font></Label>
+                        </children></StackPane>
+                   <Pane prefWidth="8.0" />
+                   <StackPane prefWidth="72.0">
+                       <children>
+                           <ImageView fitWidth="64.0" pickOnBounds="true" preserveRatio="true">
+                               <image>
+                                   <Image url="@../../../assets/ui/button/tower_option_buttons_1.png" />
+                               </image>
+                           </ImageView>
+                           <Label text="300" translateX="16" translateY="24">
+                               <font>
+                                   <Font name="System Bold" size="13.0" />
+                               </font></Label>
+                       </children></StackPane>
+                   <Pane prefWidth="8.0" />
+                <StackPane prefWidth="72.0">
+                    <children>
+                        <ImageView fitWidth="64.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../../assets/ui/button/tower_option_buttons_2.png" />
+                            </image>
+                        </ImageView>
+                        <Label text="300" translateX="16" translateY="24">
+                            <font>
+                                <Font name="System Bold" size="13.0" />
+                            </font></Label>
+                    </children></StackPane>
+               </HBox>
+                </StackPane>
+         </AnchorPane>
         </StackPane>
     </center>
     <right>
         <VBox alignment="TOP_CENTER" prefWidth="256.0" spacing="10" BorderPane.alignment="CENTER">
             <children>
-                <Button fx:id="pauseButton" text="Pause" />
-                <Button fx:id="speedButton" text="x2" />
-                <Button fx:id="exitButton" text="Exit" />
-                <HBox alignment="CENTER_LEFT" spacing="10">
-                    <Pane prefHeight="24.0" prefWidth="24.0" />
+                <Pane prefHeight="16.0" />
+                <HBox alignment="CENTER">
+                    <Button fx:id="pauseButton" prefWidth="64.0" text="Pause" />
+                    <Pane prefWidth="16.0" />
+                    <Button fx:id="speedButton" prefWidth="64.0" text="x2" />
+                    <Pane prefWidth="16.0" />
+                    <Button fx:id="exitButton" prefWidth="64.0" text="Exit" />
+                </HBox>
+                <Pane prefHeight="16.0" />
+                <HBox alignment="CENTER">
                     <ImageView fx:id="healthIcon" fitHeight="24" fitWidth="24" />
-                    <Label fx:id="healthLabel" text="100" />
-                </HBox>
-
-                <HBox alignment="CENTER_LEFT" spacing="10">
-                    <Pane prefHeight="24.0" prefWidth="24.0" />
+                    <Pane prefWidth="4.0" />
+                    <Label fx:id="healthLabel" text="100">
+                  <font>
+                     <Font size="16.0" />
+                  </font></Label>
+                    <Pane prefWidth="16.0" />
                     <ImageView fx:id="goldIcon" fitHeight="24" fitWidth="24" />
-                    <Label fx:id="goldLabel" text="500" />
-                </HBox>
-
-                <HBox alignment="CENTER_LEFT" spacing="10">
-                    <Pane prefHeight="24.0" prefWidth="24.0" />
+                    <Pane prefWidth="4.0" />
+                    <Label fx:id="goldLabel" text="500">
+                  <font>
+                     <Font size="16.0" />
+                  </font></Label>
+                    <Pane prefWidth="16.0" />
                     <ImageView fx:id="waveIcon" fitHeight="24" fitWidth="24" />
-                    <Label fx:id="waveLabel" text="1/10" />
+                    <Pane prefWidth="4.0" />
+                    <Label fx:id="waveLabel" text="1/10">
+                  <font>
+                     <Font size="16.0" />
+                  </font></Label>
                 </HBox>
+                <Pane prefHeight="16.0" />
 
             </children>
         </VBox>
